fix: fix alignment to center

--- a/src/components/termsScreen.module.scss
+++ b/src/components/termsScreen.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   padding: 32px;
-  margin: 40px;
+  margin: 40px auto;
   max-width: 400px;
   width: 100%;
 
